# rs-agent-gear

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent_gear/: __init__.py  _rust_core.pyi  python_backend.py
agent_gear/fs/: __init__.py
benches/: fs_bench.rs
benchmarks/: benchmark.py
llmdoc/: index.md
llmdoc/agent/: investigation_python_wrapper_path_handling.md  protocol-backend-investigation.md
llmdoc/architecture/: atomic-write.md  file-index.md  file-watcher.md  overview.md  searcher.md
llmdoc/conventions/: coding-conventions.md  git-conventions.md
llmdoc/features/: fs-watcher.md
llmdoc/guides/: ci-cd.md  development.md  external-paths.md  file-watching.md  safe-file-operations.md  search-patterns.md  using-file-index.md
llmdoc/modules/: fs-mod.md
llmdoc/overview/: project-overview.md
llmdoc/reference/: python-backend.md
src/: lib.rs
src/fs/: atomic.rs  index.rs  io.rs  mod.rs  searcher.rs  watcher.rs
src/utils/: error.rs  mod.rs
tests/python/: test_external_paths.py  test_filesystem.py
