[package]
name = "agent-gear"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance filesystem operations for AI agents"
license = "MIT"
repository = "https://github.com/your-org/agent-gear"

[lib]
name = "agent_gear"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py312"] }

# Concurrency and data structures
dashmap = "6"
crossbeam = "0.8"
rayon = "1.10"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "time"] }
parking_lot = "0.12"

# File system
ignore = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"
globset = "0.4"
memmap2 = "0.9"
tempfile = "3"

# Search (ripgrep core)
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
regex = "1"

# Utilities
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
once_cell = "1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[build-dependencies]
pyo3-build-config = "0.23"

[[bench]]
name = "fs_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
