[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "agent-gear"
version = "0.1.1"
description = "High-performance filesystem operations for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "DJJ", email = "shauiqijianhao@qq.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
    "Typing :: Typed",
]
keywords = ["agent", "filesystem", "high-performance", "rust"]

[project.urls]
Homepage = "https://github.com/TokenRollAI/rs-agent-gear"
Repository = "https://github.com/TokenRollAI/rs-agent-gear"
Documentation = "https://github.com/TokenRollAI/rs-agent-gear#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.maturin]
module-name = "agent_gear._rust_core"
python-source = "."
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "RET", "SIM"]
